fix scrollbar

--- a/src/css/newsong.css
+++ b/src/css/newsong.css
@@ -107,7 +107,7 @@ img {
 }
 .svg5 {
 	z-index: 1;
-	transform: translate(-50%, -50%) rotate(85deg);
+	transform: translate(-50%, -50%) rotate(90deg);
 }
 
 .new-button-wrapper {
